--- a/index.html
+++ b/index.html
@@ -14,9 +14,32 @@
 </head>
 
 <body>
-  <h1>Test</h1>
-  <h2>Subteste</h2>
-  <a href="#">Link</a>
-</body>
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-column">
+      <div>
+        <img src="assets/icons/List.svg" alt="ícone do menu">
+        <strong>Menu</strong>
+      </div>
 
+      <div>
+        <img src="assets/Tech News.svg" alt="technews logo">
+      </div>
+
+      <div>
+        <strong>buscar</strong>
+        <img src="assets/icons/MagnifyingGlass.svg" alt="buscar lupa">
+      </div>
+    </nav>
+
+    <nav id="secondary" class="grid grid-flow-column">
+      <a href="#">Inteligência Artificial</a>
+      <a href="#">Blockchain</a>
+      <a href="#">Hologramas</a>
+      <a href="#">Internet</a>
+      <a href="#">Vestíveis</a>
+      <a href="#">Realidade Aumentada</a>
+      <a href="#">Realidade Virtual</a> 
+    </nav>
+  </header>
+</body>
 </html>
