--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Portal de notícias</title>
   <link rel="stylesheet" href="styles/index.css">
 
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" 
-  rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -38,8 +38,59 @@
       <a href="#">Internet</a>
       <a href="#">Vestíveis</a>
       <a href="#">Realidade Aumentada</a>
-      <a href="#">Realidade Virtual</a> 
+      <a href="#">Realidade Virtual</a>
     </nav>
   </header>
+
+  <main class="grid container">
+    <section id="featured" class="grid grid-flow-column gap-16">
+      <figure class="card">
+        <img src="assets/images/Image 01.png" alt="">
+
+        <figcaption>
+          <span class="content-tag">robótica</span>
+          <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e
+            eficiência nas residências.</h2>
+        </figcaption>
+      </figure>
+
+      <div class="grid grid-flow-column-2 gap-16">
+        <figure class="card">
+          <img src="assets/images/Image 02.png" alt="">
+          <figcaption>
+            <span class="content-tag">Hologramas</span>
+            <h2 class="text-lg">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!</h2>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="assets/images/Image 03.png" alt="">
+          <figcaption>
+            <span class="content-tag">internet</span>
+            <h2 class="text-lg">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comuni...</h2>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="assets/images/Image 04.png" alt="">
+          <figcaption>
+            <span class="content-tag">vestíveis</span>
+            <h2 class="text-lg">Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o...
+            </h2>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="assets/images/Image 05.png" alt="">
+          <figcaption>
+            <span class="content-tag">realidade virtual</span>
+            <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem trad...</h2>
+          </figcaption>
+        </figure>
+
+        </div>
+    </section>
+  </main>
 </body>
+
 </html>
