most read section of the week

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
           <img src="assets/images/Image 02.png" alt="">
           <figcaption>
             <span class="content-tag">Hologramas</span>
-            <h2 class="text-lg">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!</h2>
+            <h2 class="text-lg">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas
+              telas!</h2>
           </figcaption>
         </figure>
 
@@ -67,7 +68,8 @@
           <img src="assets/images/Image 03.png" alt="">
           <figcaption>
             <span class="content-tag">internet</span>
-            <h2 class="text-lg">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comuni...</h2>
+            <h2 class="text-lg">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como
+              vivemos e nos comuni...</h2>
           </figcaption>
         </figure>
 
@@ -75,7 +77,8 @@
           <img src="assets/images/Image 04.png" alt="">
           <figcaption>
             <span class="content-tag">vestíveis</span>
-            <h2 class="text-lg">Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o...
+            <h2 class="text-lg">Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights
+              valiosos para o...
             </h2>
           </figcaption>
         </figure>
@@ -84,11 +87,49 @@
           <img src="assets/images/Image 05.png" alt="">
           <figcaption>
             <span class="content-tag">realidade virtual</span>
-            <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem trad...</h2>
+            <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a
+              aprendizagem trad...</h2>
           </figcaption>
         </figure>
 
-        </div>
+      </div>
+    </section>
+
+    <section id="weekly">
+      <header class="grid grid-flow-column">
+        <h3>Mais lidas da semana</h3>
+        <a href="#" class="grid grid-flow-column">
+          <strong>Ver tudo</strong>
+          <span></span>
+        </a>
+      </header>
+
+      <div class="grid gap-16">
+        <figure>
+          <span class="content-tag">veículos</span>
+          <img src="assets/images/Image 06.png" alt="">
+          <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...</p>
+        </figure>
+
+        <figure>
+          <span class="content-tag">hologramas</span>
+          <img src="assets/images/Image 07.png" alt="">
+          <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamada...</p>
+        </figure>
+
+        <figure>
+          <span class="content-tag">realidade virtual</span>
+          <img src="assets/images/Image 08.png" alt="">
+          <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiên...</p>
+        </figure>
+
+        <figure>
+          <span class="content-tag">internet</span>
+          <img src="assets/images/Image 09.png" alt="">
+          <p>Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.</p>
+        </figure>
+
+      </div>
     </section>
   </main>
 </body>
